// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> fill should render a color filled icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="ds-icon"
    fill="rgba(22, 47, 86, 0.87)"
    focusable="false"
    height="20"
    width="20"
  >
    <path
      clip-rule="evenodd"
      d="M0 6a3 3 0 013-3h18a3 3 0 013 3v12a3 3 0 01-3 3H3a3 3 0 01-3-3V6zm2 0a1 1 0 011-1h18a1 1 0 011 1v3H2V6zm20 5v7a1 1 0 01-1 1H3a1 1 0 01-1-1v-7h20z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`<Icon /> size should render a medium icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="ds-icon"
    fill="rgba(43, 131, 234, 1.0 )"
    focusable="false"
    height="20"
    width="20"
  >
    <path
      clip-rule="evenodd"
      d="M0 6a3 3 0 013-3h18a3 3 0 013 3v12a3 3 0 01-3 3H3a3 3 0 01-3-3V6zm2 0a1 1 0 011-1h18a1 1 0 011 1v3H2V6zm20 5v7a1 1 0 01-1 1H3a1 1 0 01-1-1v-7h20z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`<Icon /> size should render a small icon 1`] = `
<div>
  <svg
    aria-hidden="true"
    data-testid="ds-icon"
    fill="rgba(43, 131, 234, 1.0 )"
    focusable="false"
    height="16"
    width="16"
  >
    <path
      clip-rule="evenodd"
      d="M0 6a3 3 0 013-3h18a3 3 0 013 3v12a3 3 0 01-3 3H3a3 3 0 01-3-3V6zm2 0a1 1 0 011-1h18a1 1 0 011 1v3H2V6zm20 5v7a1 1 0 01-1 1H3a1 1 0 01-1-1v-7h20z"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
